--- a/styles/style.css
+++ b/styles/style.css
@@ -9,3 +9,12 @@
 .font-raleway {
     font-family: "Raleway", sans-serif;
 }
+
+.bg-banner-img {
+    border-radius: 32px;
+    background: linear-gradient(180.00deg, rgba(3, 7, 18, 0.5), rgba(3, 7, 18, 0) 100%), url('../images/banner.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-size: cover;
+    min-height: 550px;
+}
